@startuml
class Products {
    int item_ID
    String name
    Image image
    float price
    int stock
    ProductCategory productCategory
}

class User {
    int user_ID
    String name
    String email
    Wallet wallet
    Arraylsit<Products> favorites
    ArrayList<Cart> savedCarts
    UserType userType
}


Class Wallet {
    int wallet_ID
    int fonds
    ArrayList<Coupon> Coupons
    ArrayList<CreditCard> CreditCards
}

class CreditCard {
    int creditCard_ID
    string experetionDate
    string cardNumber
    string cvv
    string nameOfCardHolder
    string nameOfCard
}

class Coupon {

}

class Purchase {
    int purchase_ID
    LocalDateTime purchaseDate
    HashMap<Product, Integer> purchasedProducts
}

enum ProductCategory {
    FRUGT_OG_GRØNT
    MEJERIPRODUKTER
    KØD_OG_FISK
    FROST
    PÅLÆG
    DRIKKEVARER
    BRØD_KIKS_OG_KAGER
    SLIK_OG_SNACKS
}

enum UserType {
    COSTUMER
    WORKER
}

class Cart {
    User user
    ArrayList<Product> purchasedProducts
}

'medarbejder del
class Worker {
    String phoneNumber
}

class Shift {
    int shift_ID
    LocalDateTime date
    float period
    String descreption
    Worker workerAssigned
}

class Message {
    int message_ID
    LocalDateTime date
    Worker sender
    ArrayList<Worker> receivers
    String message
}

Wallet "1" --o "0..*" Coupon
Wallet "1" --* "0..*" CreditCard
User "1" --* "1" Wallet
Cart "1" --o "0..*" Products

Worker --|> User
Shift "1" *-- "1" Worker

ProductCategory "1" o-- "1" Products
UserType "1" *-- "1" User

@enduml